# monoid-learner

./: .gitignore  README.md  monoid-learner.cabal
app/: Main.hs
src/: Equivalence.hs  KnuthBendix.hs  MStar.hs  Monoid.hs  Word.hs
src/Examples/: Examples.hs
test/: test.hs
